<resources>
    <string name="app_name">Assessment</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">Don\'t have an account?</string>
    <string name="link_signup">Sign up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="forget_password">Forget password?</string>
    <string name="title_check_email">Email verification</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Send</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="logged">You are logged in!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_recover">Recover</string>
    <string name="recover_description">Enter your email address in order to send you the steps to change your password.</string>
    <string name="title_password_recovery">Password recovery</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="subject_title">Desenvolvimento Android</string>
    <string name="create_your_account">Create your account</string>
    <string name="cancel">Cancel</string>
    <string name="delete_icon">Delete icon</string>
    <string name="new_recipe_add_buttom">New recipe add buttom</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_on_file">Save on file</string>
    <string name="enter_recipe_style">Enter recipe style</string>
    <string name="enter_recipe_name">Enter recipe name</string>
</resources>