<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.camelloncase.testedeperformance03.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.camelloncase.testedeperformance03.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.camelloncase.testedeperformance03.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.camelloncase.testedeperformance03.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_recover"
            app:destination="@id/navigation_recover" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.camelloncase.testedeperformance03.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_recover"
        android:name="com.camelloncase.testedeperformance03.ui.recover.RecoverFragment"
        android:label="@string/title_recover"
        tools:layout="@layout/fragment_recover" >
        <action
            android:id="@+id/action_navigation_recover_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
</navigation>